--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,5 +6,12 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+
+    <form>
+
+    <input type="submit" name="vis_kunder" value="Vis kunder">
+    </form>
+
+
     </body>
 </html>
